# rl-agent-plugin

./: .gitignore  LICENSE  README.md  plugin.cfg
Editor/Docks/: EditorUiScale.cs  EditorUiScale.cs.uid  HPODashPanel.cs  HPODashPanel.cs.uid  LineChartPanel.cs  LineChartPanel.cs.uid  RLDashboard.cs  RLDashboard.cs.uid  RLImitationDock.cs  RLImitationDock.cs.uid  RLSetupDock.cs  RLSetupDock.cs.uid
Editor/ImportExport/: RLModelExporter.cs  RLModelExporter.cs.uid  RLModelFormatLoader.cs  RLModelFormatLoader.cs.uid
Editor/Inspectors/: RLHPOParameterInspectorPlugin.cs  RLHPOParameterInspectorPlugin.cs.uid  RLHPOParameterNameProperty.cs  RLHPOParameterNameProperty.cs.uid  RLHPOParameterNumericProperty.cs  RLHPOParameterNumericProperty.cs.uid  RLNetworkGraphInspectorPlugin.cs  RLNetworkGraphInspectorPlugin.cs.uid  RLNetworkGraphProperty.cs  RLNetworkGraphProperty.cs.uid
Editor/Plugin/: RLAgentPluginEditor.Wizard.cs  RLAgentPluginEditor.Wizard.cs.uid  RLAgentPluginEditor.cs  RLAgentPluginEditor.cs.uid  icon.png.import
Editor/Validation/: TrainingSceneValidation.cs  TrainingSceneValidation.cs.uid
Resources/Checkpoints/: RLCheckpoint.cs  RLCheckpoint.cs.uid  RLCheckpointLayer.cs  RLCheckpointLayer.cs.uid
Resources/Config/: HpoGroupAttribute.cs  HpoGroupAttribute.cs.uid  RLA2CConfig.cs  RLA2CConfig.cs.uid  RLAlgorithmConfig.cs  RLAlgorithmConfig.cs.uid  RLCurriculumConfig.cs  RLCurriculumConfig.cs.uid  RLDQNConfig.cs  RLDQNConfig.cs.uid  RLDistributedConfig.cs  RLDistributedConfig.cs.uid  RLEnums.cs  RLEnums.cs.uid  RLEvaluationConfig.cs  RLEvaluationConfig.cs.uid  RLMCTSConfig.cs  RLMCTSConfig.cs.uid  RLPPOConfig.cs  RLPPOConfig.cs.uid  RLPolicyGroupConfig.cs  RLPolicyGroupConfig.cs.uid  RLPolicyPairingConfig.cs  RLPolicyPairingConfig.cs.uid  RLRunConfig.cs  RLRunConfig.cs.uid  RLSACConfig.cs  RLSACConfig.cs.uid  RLScheduleConfig.cs  RLScheduleConfig.cs.uid  RLSelfPlayConfig.cs  RLSelfPlayConfig.cs.uid  RLStoppingConfig.cs  RLStoppingConfig.cs.uid  RLTrainerConfig.cs  RLTrainerConfig.cs.uid  RLTrainingConfig.cs  RLTrainingConfig.cs.uid
Resources/HPO/: RLHPOEnums.cs  RLHPOEnums.cs.uid  RLHPOObjectiveConfig.cs  RLHPOObjectiveConfig.cs.uid  RLHPOObjectiveGroup.cs.uid  RLHPOObjectiveSource.cs  RLHPOObjectiveSource.cs.uid  RLHPOParameter.cs  RLHPOParameter.cs.uid  RLHPOStudy.cs  RLHPOStudy.cs.uid
Resources/Models/: RLCnnEncoderDef.cs  RLCnnEncoderDef.cs.uid  RLContinuousActionRange.cs  RLDenseLayerDef.cs  (+18 more)
docs/: README.md  algorithms.md  architecture.md  build-native.md  configuration.md  demos.md  features.md  get-started.md  gpu-cnn.md  hpo.md  imitation.md  sensors.md  tuning.md
native/: CMakeLists.txt  rl_cnn.gdextension  rl_cnn.gdextension.uid
native/src/: RlCnnEncoder.cpp  RlCnnEncoder.h  RlDenseLayer.cpp  RlDenseLayer.h  RlGruLayer.cpp  RlGruLayer.h  RlLayerNormLayer.cpp  RlLayerNormLayer.h  RlLstmLayer.cpp  RlLstmLayer.h  register_types.cpp  register_types.h  rl_simd.h
(+288 files in other folders)
